--- a/MasterPage.master
+++ b/MasterPage.master
@@ -9,30 +9,32 @@
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
     <style type="text/css">
-        .auto-style1 {
-            text-align: center;
-            font-family: fantasy;
-            font-weight: normal;
-            font-size: x-large;
-            color: #3399FF;
+        .auto-style8 {
+            font-family: Youth and Beauty;
+        }
+        .auto-style10 {
+            width: 975px;
+        }
+        .auto-style11 {
+            font-family: Youth and Beauty;
+            width: 975px;
+        }
+        .auto-style12 {
+            width: 975px;
+            height: 316px;
         }
     </style>
 </head>
 <body>
     <form id="form1" runat="server">
-    <table style="width:1100px; margin: 0 auto">
-        <tr style="width:1100px; height:50px">
-            <td style="width:60px">
-                <img src="imagen/logo.jpg" />
-            </td>
-            <td style="width:120px"></td>
-            <td style="width:900px"> 
-               <h2 class="auto-style1"> Damos Solución A Tu Problema De Visión </h2> 
-            </td>
+    <table style="margin: 0 auto" class="auto-style8">
+        <tr style="width:1100px; height:40px">
+            <td class="auto-style10">
+                <img alt="banner" class="auto-style12" src="imagen/perfect.png" /></td>
         </tr>
         <tr style="width:1100px;height:40px; background-color:deepskyblue">
-            <td colspan="3">
-                <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal">
+            <td class="auto-style11">
+                <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal" CssClass="auto-style8">
                     <Items>
                         <asp:MenuItem Text="Inicio" Value="Inicio" NavigateUrl="~/Index.aspx" ></asp:MenuItem> 
                         <asp:MenuItem Text="¿Quienes somos?" Value="¿Quienes somos?" NavigateUrl="~/Quienes somos.aspx"></asp:MenuItem>
@@ -41,19 +43,19 @@
                         <asp:MenuItem Text="Cita " Value="New Item" NavigateUrl="~/Cita.aspx"></asp:MenuItem>
                     </Items>
                     <StaticHoverStyle BackColor="#00CC00" ForeColor="White" />
-                    <StaticMenuItemStyle Font-Size="X-Large" ForeColor="Black" HorizontalPadding="40px" />
+                    <StaticMenuItemStyle Font-Size="XX-Large" ForeColor="Black" HorizontalPadding="40px" />
                 </asp:Menu>
             </td>
         </tr>
         <tr style="width:1100px">
-            <td colspan="3">
+            <td class="auto-style10">
                 <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
             </td>
         </tr>
-        <tr style="width:1100px;height:20px">
-            <td colspan="3">
+        <tr style="width:900px;height:30px">
+            <td class="auto-style10">
         
             </td>
         </tr>
